<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetailFragment">

    <data>

        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:labelFor="@+id/edit_text_shoe_name"

            android:text="@string/shoe_name" />

        <EditText
            android:id="@+id/edit_text_shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:labelFor="@+id/edit_text_shoe_size"
            android:text="@string/shoe_size" />

        <EditText
            android:id="@+id/edit_text_shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:labelFor="@+id/edit_text_company"
            android:text="@string/company" />

        <EditText
            android:id="@+id/edit_text_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:labelFor="@+id/edit_text_description"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_save_shoe_detail"
                style="@style/shoe_button_style"
                android:text="@string/save" />

            <Button
                android:id="@+id/id_cancel"
                style="@style/shoe_button_style"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</layout>